Fixed body overflow

--- a/styles/about.css
+++ b/styles/about.css
@@ -1,3 +1,7 @@
+body {
+    overflow: hidden;
+}
+
 .about-page-container{
     height: 100%;
     width: 100%;
